--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Amer Bashimam CV</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/svg" href="address-card-regular.svg">
+    <link rel="stylesheet" href="Css/index.css">
+    <link rel="icon" type="image/svg" href="Css/address-card-regular.svg">
 </head>
 <body>
 <div>
-	<img src="PPhoto.jpg" width="20%" alt="amer bashimam">
+	<img src="Css/PPhoto.jpg" width="20%" alt="amer bashimam">
 <h1>AMER<br>BASHIMAM</h1>
 <p>Software Product Manager</p>
 </div>
